--- a/style.css
+++ b/style.css
@@ -8,11 +8,25 @@
 
 .html {
   font-size: 62.5%;
+  overflow-x: hidden;
 }
 
+/* body {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+} */
 .navbar input[type="checkbox"],
 .navbar .hamburger-lines {
   display: none;
+}
+
+section {
+  padding: 6rem 9% 0.1rem;
+}
+.hero {
+  background-image: linear-gradient(#272f54, #ffffff);
 }
 
 .container {
@@ -20,10 +34,53 @@
   width: 90%;
   margin: auto;
 }
+h1 {
+  text-align: center;
+  font-size: 2.5rem;
+}
 
+/* .heading {
+  margin-top: 0px;
+} */
+
+/* .heading::after {
+  content: "";
+
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 4px;
+  background-color: #000;
+  transform: scaleX(0);
+  transition: 1s;
+}
+.heading:hover::after {
+  transform: scaleX(1);
+} */
+span {
+  display: flex;
+
+  justify-content: center;
+}
+
+.span1 {
+  font-size: 2rem;
+  font-weight: bold;
+}
+
+.date {
+  padding-top: 1rem;
+  font-size: 1.5rem;
+  color: red;
+}
+hr {
+  margin-top: 25px;
+  height: 5px;
+  background-color: #272f54;
+}
 .navbar {
-  box-shadow: 0px 5px 10px 0px #aaa;
-  position: fixed;
+  position: relative;
   width: 100%;
   background: #272f54;
   color: #fff;
@@ -62,6 +119,18 @@
 
 .navbar a:hover {
   color: #117964;
+}
+
+.points li {
+  padding-top: 1.5rem;
+
+  padding-left: 5rem;
+  padding-right: 5rem;
+  font-size: 1.5rem;
+}
+
+.scope {
+  padding-top: 2rem;
 }
 
 @media (max-width: 768px) {
@@ -140,8 +209,8 @@
     margin-left: -40px;
     padding-left: 40px;
     transition: transform 0.5s ease-in-out;
-    box-shadow: 5px 0px 10px 0px #aaa;
-    overflow: scroll;
+    box-shadow: 5px 0px 10px 0px #42508d;
+    /* overflow: scroll; */
   }
 
   .navbar .menu-items li {
