--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ section {
   padding: 6rem 9% 0.1rem;
 }
 .hero {
-  background-image: linear-gradient(#272f54, #ffffff);
+  background-image: linear-gradient(#272F54, #ffffff);
 }
 
 .container {
