home page updated

--- a/style.css
+++ b/style.css
@@ -133,6 +133,35 @@ hr {
   padding-top: 2rem;
 }
 
+.topic-container {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  align-items: center;
+  gap: 40px;
+  margin-top: 40px;
+}
+.topic-container .topic-box {
+  position: relative;
+  border-radius: 1rem;
+  background-image: linear-gradient(#949ed4, #ffffff);
+
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.topic-container .topic-box h3 {
+  padding: 1rem;
+  text-align: center;
+}
+.topic-container .topic-box ul {
+  padding: 2rem;
+}
+
+@media (max-width: 1200px) {
+  html {
+    font-size: 60%;
+  }
+}
 @media (max-width: 768px) {
   .navbar {
     opacity: 0.95;
@@ -241,10 +270,25 @@ hr {
   .navbar-container input[type="checkbox"]:checked ~ .hamburger-lines .line3 {
     transform: rotate(-45deg);
   }
+
+  .topic-container {
+    grid-template-columns: repeat(1, 1fr);
+  }
 }
 
 @media (max-width: 500px) {
   .navbar-container input[type="checkbox"]:checked ~ .logo {
     display: none;
+  }
+  .points li {
+    font-size: 1.5rem;
+  }
+  .topic-container {
+    font-size: 1.5rem;
+    /* padding: 2rem; */
+  }
+
+  .topic-container .topic-box {
+    padding: 2rem;
   }
 }
