--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ section {
   padding: 6rem 9% 0.1rem;
 }
 .hero {
-  background-image: linear-gradient(#272F54, #ffffff);
+  background-image: linear-gradient(#272f54, #ffffff);
 }
 
 .container {
@@ -37,6 +37,16 @@ section {
 h1 {
   text-align: center;
   font-size: 2.5rem;
+}
+/* .timeline {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+} */
+.timeline img {
+  padding: 5rem;
+
+  size: 100px;
 }
 
 /* .heading {
@@ -135,9 +145,9 @@ hr {
 
 .topic-container {
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
+  grid-template-columns: repeat(4, 1fr);
   align-items: center;
-  gap: 40px;
+  gap: 10px;
   margin-top: 40px;
 }
 .topic-container .topic-box {
