--- a/style.css
+++ b/style.css
@@ -173,8 +173,13 @@ th {
   text-align: center;
   padding: 2rem;
 }
+
+/* .text {
+} */
 .card {
+  margin-top: 10px;
   padding: 2rem;
+  /* left: 0; */
   position: relative;
   display: flex;
   flex-direction: column;
@@ -185,6 +190,27 @@ th {
 .btn {
   display: flex;
   justify-content: center;
+}
+
+.topic-box img {
+  width: 100%;
+  height: 150px;
+}
+.col {
+  margin-top: 10px;
+  padding: 2rem;
+  display: flex;
+  flex-direction: column;
+  border-radius: 1rem;
+  background-image: linear-gradient(#949ed4, #ffffff);
+}
+.image {
+  padding: 1.4rem;
+  width: 100%;
+  height: auto;
+}
+.col .topic-box img {
+  margin-left: 0px;
 }
 button {
   border: none;
