--- a/style.css
+++ b/style.css
@@ -136,8 +136,8 @@ hr {
 .points li {
   padding-top: 1.5rem;
 
-  padding-left: 5rem;
-  padding-right: 5rem;
+  /* padding-left: 5rem; */
+  /* padding-right: 2rem; */
   font-size: 1.5rem;
 }
 
