--- a/style.css
+++ b/style.css
@@ -11,12 +11,9 @@
   overflow-x: hidden;
 }
 
-/* body {
-  width: 100%;
-  display: flex;
-  justify-content: center;
-  flex-wrap: wrap;
-} */
+body {
+  font-family: "Inika";
+}
 .navbar input[type="checkbox"],
 .navbar .hamburger-lines {
   display: none;
@@ -45,25 +42,6 @@ h1 {
   width: 100%;
 }
 
-/* .heading {
-  margin-top: 0px;
-} */
-
-/* .heading::after {
-  content: "";
-
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  width: 100%;
-  height: 4px;
-  background-color: #000;
-  transform: scaleX(0);
-  transition: 1s;
-}
-.heading:hover::after {
-  transform: scaleX(1);
-} */
 span {
   display: flex;
 
