--- a/style.css
+++ b/style.css
@@ -142,6 +142,9 @@ hr {
 .topic-container .topic-box ul {
   padding: 2rem;
 }
+.timeline {
+  background-image: linear-gradient(#ffffff, #adb8e8);
+}
 
 td,
 th {
@@ -162,6 +165,15 @@ th {
   align-items: center;
   border-radius: 1rem;
   background-image: linear-gradient(#949ed4, #ffffff);
+}
+.Contact {
+  background-image: linear-gradient(#adb8e8, #ffffff);
+}
+.color {
+  background-image: linear-gradient(#adb8e8, #ffffff);
+}
+.Registration {
+  background-image: linear-gradient(#adb8e8, #ffffff);
 }
 .btn {
   display: flex;
@@ -434,6 +446,6 @@ button:active span::before {
   margin-left: 20%;
   width: 60%;
 }
-footer {
-  margin-top: 1rem;
+.padding {
+  padding: 1rem;
 }
