--- a/style.css
+++ b/style.css
@@ -20,8 +20,10 @@ body {
 }
 
 section {
+  /* min-height: 500px; */
   padding: 2rem 9% 0.1rem;
 }
+
 .hero {
   background-image: linear-gradient(#272f54, #ffffff);
 }
@@ -168,6 +170,10 @@ th {
 }
 .Contact {
   background-image: linear-gradient(#adb8e8, #ffffff);
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  min-height: 500px;
 }
 .color {
   background-image: linear-gradient(#adb8e8, #ffffff);
